--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "https://smart-researchteam.github.io/"  # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-title = "SM@RT"
+title = "SM@RT Team"
 copyright = "&copy; 2017. Last update: 24/11/2017"
 theme = "academic"
 enableEmoji = true
