--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ deploy:
   github-token: $GITHUB_TOKEN  # Set in travis-ci.org dashboard, marked secure
   keep-history: true
   on:
-    branch: master
+    branch: gh-pages
