--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "https://smart-researchteam.github.io/"  # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
 title = "SM@RT Team"
-copyright = "&copy; 2018. Last update: 15/01/2018"
+copyright = "&copy; 2018. Last update: 2018/02/06"
 theme = "academic"
 enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
@@ -197,7 +197,7 @@ defaultContentLanguageInSubdir = false
   weight = 9
 
 [[menu.main]]
-  name = "Students"
+  name = "Thesis"
   url = "#students"
   weight = 11
 
