--- a/config.toml
+++ b/config.toml
@@ -35,7 +35,7 @@ defaultContentLanguageInSubdir = false
   font = "yanone"
 
   # Your details.
-  name = "Reliable Software Development"  # Theme 7
+  name = "Reliability of Systems & Software"  # Theme 7
   # role = "IRIT Laboratory"                # Lab
 
   # Organizations/Affiliations.
