--- a/netlify.toml
+++ b/netlify.toml
@@ -3,8 +3,8 @@
   publish = "docs"
 
 [build.environment]
-  # HUGO_VERSION = "0.83.1"
-  HUGO_VERSION = "0.88.1"
+  # HUGO_VERSION = ""
+  HUGO_VERSION = ""
   HUGO_ENABLEGITINFO = "true"
 
 [context.production.environment]
