--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -122,5 +122,5 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
   [[module.imports]]
     path = "github.com/wowchemy/wowchemy-hugo-modules/netlify-cms-academic"
     # My widget's GitHub URL for adding button in publis
-  [[module.imports]]
-    path = "github.com/jmbruel/wowchemy-widget-mypub"
+  #[[module.imports]]
+  #  path = "github.com/jmbruel/wowchemy-widget-mypub"
