--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -126,3 +126,8 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
     # My widget's GitHub URL for adding button in publis
   #[[module.imports]]
   #  path = "github.com/jmbruel/wowchemy-widget-mypub"
+
+# security (bug 29/04/2022)
+[security]
+  [[security.funcs]]
+    getenv = ["^HUGO_, ^WC_"]
