--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -130,4 +130,6 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
 # security (bug 29/04/2022)
 [security]
   [[security.funcs]]
-    getenv = ["^HUGO_, ^WC_"]
+    getenv = "^HUGO_"
+  [[security.funcs]]
+    getenv = "^WC_"
