--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -15,7 +15,7 @@ baseurl = "https://smart-researchteam.github.io/"
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
 #copyright = "&copy; {year} - ACDC. Last update: 31/05/2021"
-copyright = "&copy; {year} - ACDC. Last update: April 29th, 2022"
+copyright = "&copy; {year} - ACDC. Last update: October, 11th, 2022"
 
 # Your details.
 # team = "SM@RT"
